# svea_vision

./: CMakeLists.txt  analysis.ipynb  extract_csvs.py  package.xml  setup.py  velocity_validation_2024-06-11-16-06-33.bag  velocity_validation_2024-06-11-16-14-16_diagonal.bag  velocity_validation_2024-06-11-16-46-51_ground_truth.bag
launch/: camera2.launch  object_pose.launch  zed_main.launch
scripts/: object_detect.py  object_pose.py  object_state_estimation.py  person_state_estimation.py
src/object_state_estimation/: README.md
src/svea_vision/: README.md  kalman_filter.py  merge_cameras.py  path_logger.py  tf_aruco2map.py  tf_camera2.py  tf_camera2map.py  visualise.py
src/svea_vision/tests/: kalman_filter_test.py
svea_vision/: .gitignore  CMakeLists.txt  README.md  extract_csvs.py  extract_csvs2.py  out_2024-03-04-18-24-27.bag  out_2024-03-04-19-08-30_one_person_moving.bag  out_2024-03-04-19-09-45_standing.bag  out_2024-03-04-19-10-28_two_people_moving.bag  out_2024-03-04-19-11-38_one_person_standing_one_moving.bag  package.xml  requirements.txt  setup.py
svea_vision/data/: out_2024-03-25-10-31-23_one_person_moving.bag  out_2024-03-25-10-37-34_two_in_parallel.bag
svea_vision/launch/: object_pose.launch  person_state_estimation_validation.launch  sidewalk_mapper.launch  sidewalk_segmentation.launch  zed_eval.launch  zed_main.launch
svea_vision/scripts/: data_splitter.py  detection_splitter.py  object_detect.py  object_pose.py  object_state_estimation.py  pedestrian_flow_estimate.py  person_state_estimation.py  pub_image.py  segment_anything.py  sidewalk_mapper.py  sidewalk_pc_to_og.py  sidewalk_segmentation.py  sidewalk_segmentation_nanosam.py  static_image_publisher.py
svea_vision/src/svea_vision/: kalman_filter.py  static_image_publisher.py
svea_vision/src/svea_vision/tests/: kalman_filter_test.py
svea_vision_msgs/: CMakeLists.txt  package.xml
svea_vision_msgs/msg/: PersonState.msg  PersonStateArray.msg
