<?xml version="1.0"?>
<package format="3">
  <name>svea_vision_msgs</name>
  <version>0.1.0</version>
  <description>The svea_vision_msgs package</description>

  <maintainer email="kajarf@kth.se">Kaj Munhoz Arfvidss</maintainer>

  <license>MIT</license>

  <url type="website">https://svea.eecs.kth.se</url>

  <author email="kajarf@kth.se">Kaj Munhoz Arfvidss</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export></export>
</package>
